--- a/package.json
+++ b/package.json
@@ -2,38 +2,23 @@
   "name": "Backend-Accelerator-2020",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "repository": "git@github.com:christianjuth/Backend-Accelerator-2020.git",
   "author": "Christian Juth <cjuth2@gmail.com>",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.0"
   },
   "scripts": {
     "dev": "nodemon -x 'clear;node'",
     "test": "jest --watchAll"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.10.4",
-    "babel-jest": "^26.1.0",
-    "babel-polyfill": "^6.26.0",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
-  },
-  "jest": {
-    "testMatch": [
-      "**/__tests__/**/*.?(m)js?(x)",
-      "**/?(*.)(spec|test).?(m)js?(x)"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "mjs"
-    ],
-    "transform": {
-      "^.+\\.mjs$": "babel-jest"
-    }
   }
 }
