--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backend-Accelerator-2020",
+  "name": "backend-accelerator-2020",
   "version": "1.0.0",
   "main": "index.js",
   "type": "commonjs",
@@ -9,16 +9,32 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.0"
   },
   "scripts": {
     "dev": "nodemon -x 'clear;node'",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --runInBand"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
+    "@types/mongodb": "^3.6.3",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "4.4.1"
+    }
+  },
+  "jest": {
+    "preset": "@shelf/jest-mongodb",
+    "testMatch": ["<rootDir>/Tests/**/*.js?(x)", "**/?(*.)(spec|test).js?(x)"]
   }
 }
